# SkelForm

./: .gitattributes  .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  build_web.py  index.html  readme.md  release.py  skellington.psd  skellington.skf  startup.json  untitled.skf  web_build.py
.github/workflows/: rust.yml
assets/: skf_readme.md  startup.json
assets/ffmpeg-native/: ffmpeg-linux  ffmpeg-mac-arm
assets/i18n/: en.json
release/: create-dmg.sh  readme.md  readme.txt  release.py
release/SkelForm.app/Contents/Resources/: skf.icns
release/mac_wrapper/SkelForm.app/Contents/Resources/: skf.icns
release_wrappers/skelform.app/Contents/: Info.plist
samples/: Untitled.skf  _skellina.skf  _skellington.skf  skellina.psd  skellina.skf  skellington.psd  skellington.skf  skelson.psd
src/: armature_window.rs  atlas_modal.rs  backwards_compat.rs  blit.wgsl  bone_panel.rs  bone_window.rs  editor.rs  export_modal.rs  file_reader.rs  image_reader.rs  input.rs  keyframe_editor.rs  keyframe_panel.rs  lib.rs  localization.rs  main.rs  modal.rs  readme.md  renderer.rs  settings_modal.rs  shader.wgsl  shared.rs  startup_window.rs  styles_modal.rs  ui.rs  utils.rs  warnings.rs
vendor_deps/max_rects/: .cargo-checksum.json  Cargo.toml
vendor_deps/max_rects/src/: lib.rs  visualizer.rs
vendor_deps/psd/src/: lib.rs  render.rs
