[package]
name = "SkelForm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
name = "skelform_lib"

[dependencies]
bytemuck = { version = "1.21.0", features = ["derive"] }
egui = "0.31.0"
egui-wgpu = { version = "0.31.0", features = ["winit"] }
egui_extras = { version = "0.31.1", features = ["image"] }
serde = { version = "1.0.219", features = ["serde_derive"] } 
serde_json = "1.0.140"
tween = "2.0.4"
wgpu = { version = "24.0.1", default-features = false }
winit = "0.30.9"
chrono = "0.4.41"
image = "0.25.5"
#lyon = "1.0.1"
psd = "0.3.5"
glob = "0.3.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = "0.31.0"
pollster = "0.4.0"
rfd = { version = "0.15.3",  features = ["gtk3"], default-features = false}
zip = "4.0.0"
directories-next = "2.0.0"
open = "5.3.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.77", features = ["Window", "Document", "HtmlImageElement", "CanvasRenderingContext2d", "HtmlCanvasElement", "ImageData"] }
futures = "0.3.31"
log = "0.4.26"
web-time = "1.1.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
egui-winit = { version = "0.31.0", default-features = false }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
zip = { version = "4.0.0", default-features = false, features = ["deflate"] }
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }

[features]
default = ["wgpu/default"]
webgl = ["wgpu/webgl"]
webgpu = ["wgpu/webgpu"]
mobile = []
debug = []

[build-dependencies]
winresource = "0.1.23"
