[package]
name = "SkelForm"
version = "0.2.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
name = "skelform_lib"

[profile.release]
opt-level = "s"   # or "s"
lto = true
debug = true

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
egui = { version = "0.33.0", features=["serde"] }
egui-wgpu = { version = "0.33.0", features = ["winit"] }
serde = { version = "1.0.219", features = ["serde_derive"] } 
serde_json = "1.0.140"
wgpu = { version = "27.0.1", features=["webgl"]}
winit = "0.30.12"
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg"] }
psd = { "path" = "./vendor_deps/psd"}  # vendored for faster layer flattening algorithm
max_rects = { "path" = "./vendor_deps/max_rects"}  # vendored to remove visualizer
spade = "2.15.0" # Delaunay triangulation for meshes
egui_commonmark = { version = "0.22.0" } # egui markdown support
strum = { version = "0.27.2", features = ["derive"] }
backtrace = "0.3.76"

# Handle system shortcuts (cmd+q, cmd+w, etc) since winit can't
# https://github.com/rust-windowing/winit/issues/2776#issuecomment-2477222703
global-hotkey = "0.7.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4.0"
egui-winit = "0.33.0"
rfd = { version = "0.15.3",  features = ["gtk3"], default-features = false}
zip = { version = "4.0.0" }
directories-next = "2.0.0" # for common dirs like config & temp data
open = "5.3.2" # open links or folders
ureq = "3.1.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.77", features = ["Window", "Document", "HtmlImageElement", "CanvasRenderingContext2d", "HtmlCanvasElement", "ImageData"] }
futures = "0.3.31"
log = "0.4.26"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
egui-winit = { version = "0.33.0", default-features = false }
wasm-bindgen = { version = "0.2.100", default-features = false }
wasm-bindgen-futures = "0.4.50"
zip = { version = "4.0.0", default-features = false, features = ["deflate"] }
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
web-time = "1.1.0"

[features]
default = ["wgpu/default"]
webgl = ["wgpu/webgl"]
webgpu = ["wgpu/webgpu"]
debug = []

[build-dependencies]
winresource = "0.1.23"
